Added a Transform to a Person, and a graphics rest client for manipulating the Transform and the Room.